--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "bbrest"
-version = "0.2.1"
+version = "0.2.3"
 description = ""
 authors = ["Matt Deakyne <m.d@ku.edu>"]
+readme = 'README.md'
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6"
 maya = "*"
 requests = "*"
 aiohttp = "*"
