--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bbrest"
-version = "0.3.8-alpha.1"
+version = "0.3.8-alpha4"
 description = "Blackboard REST API for Humans"
 authors = ["Matt Deakyne <m.d@ku.edu>"]
 readme = 'README.md'
@@ -18,6 +18,7 @@ jupyterlab = "*"
 ipython = "^7.2"
 requests-oauthlib = "^1.2"
 splinter = "*"
+ipyauth = "^0.2.6"
 
 
 [build-system]
