Moving permissions to py config file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "bbrest"
-version = "0.4.4"
+version = "0.4.5"
 description = "Blackboard REST API for Humans"
 authors = ["Matt Deakyne <m.d@ku.edu>"]
 readme = 'README.md'
+include = ["ent_map.json"]
+
 
 [tool.poetry.dependencies]
 python = "^3.6"
